	  Class (MSC) using MMC/SD card as the logical unit.  Updated the default
	  PIC32MX7 MMB board configuration so that USB and the mass storage class
	  are enabled by default.
	* drivers/lcd/mio283qt2.c and include/nuttx/lcd/mio283qt2.h:  Add generic
	  support for the MIO283QT2 LCD.
	* configs/pic32mx7mmb/src/up_mio283qt2.c:  Add support for the MIO283QT2
	  LCD on the PIC32MX7 MMB board.
	* configs/pic32mx7mmb/src/up_touchscreen.c:  Add an ADC-based touchscreen
	  driver for the PIC32MX7 MMB board.  Kind of works, but needs more
	  verification and tuning.
	* arch/mips/src/common/up_idle.c:  Strange but important fix.  For some still-
	  unknown reason, interrupts are left in an unhealthy state in the IDLE
	  when the work queue is enabled.  This is partially because some interrupt
	  related logic is not built in that case.  Simply disabling then re-
	  enabling interrupts restores the proper state.
	* graphics/nxglib/lcd/nxglib_filltrapezoid.c and fb/nxglib_filltrapezoid.c:
	  Fix an error when the trapezoid is only 1 line high.  In this case, a
	  divide by zero error would occur.  The fix is to draw the 1 line high
	  trapezoid as a run.
	* drivers/usbdev/pl2303.c:  Fixe a cut'n'paste error that snuck into
	  the PL2303 emulation driver several months back.

6.20 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* configs/stm3210e-eval/src and arch/arm/src/stm32/: Add beginnings of
	  power management support for the STM32 and the STM3210E-EVAL board, in
	  particular.
	* Documentation/NfsHowTo.html:  Add a How-To document for the new NFS
	  client feature.
	* arch/mips/include/pic32mx and arch/mips/src/pic32mx:  Add support for the
	  PIC32MX1 and PIC32MX2 families.
	* configs/mirtoo:  Add a board configuration to support the DTX1-4000L
	  "Mirtoo" module from http://www.dimitech.com/
	* tools/pic32mx:  All of the duplicate directories containing the same
	  same PIC32 tools were move to this single location.
