@@ -1,5 +1,5 @@
 ############################################################################
-# configs/mirtoo/ostest/Make.defs
+# configs/mirtoo/nsh/Make.defs
 #
 #   Copyright (C) 2012 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
